<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/fondomorado"
    tools:context=".CSalaSeguridad">

    <LinearLayout
        android:id="@+id/LinearLayoutCSalaSeguridad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/relativeLayoutCSalaSeguridad"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/btn_style"
            android:layout_marginBottom="50dp"
            android:layout_marginRight="20dp">

            <TextView
                android:id="@+id/textViewCSalaSeguridadTitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strLuces_de_banio"
                android:textColor="@color/colorNegro"
                android:textSize="22sp"
                android:layout_marginStart="5dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewCSalaSeguridadUsuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewCBanioLucesTitulo"
                android:layout_marginTop="6dp"
                android:text="@string/strUsuario"
                android:textColor="@color/colorNegro"
                android:layout_marginStart="5dp"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/imageViewCSalaSeguridadUsuario"
                android:layout_width="62dp"
                android:layout_height="62dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/user" />

        </RelativeLayout>

        <TextView
            android:id="@+id/textViewCSalaSeguridadLucesTituloControlLuces"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:text="@string/Alarma_de_incendio"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Switch
            android:id="@+id/switchCSalaSeguridadSensorFuegoControl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:text="@string/Sensor_de_fuego"
            android:textSize="20sp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonCSalaSeguridadAtras"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="8"
            android:background="@drawable/btn_style"
            android:onClick="pantallaCSala"
            android:text="@string/strAtras" />

        <Button
            android:id="@+id/buttonCSalaSeguridadSalir"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="8"
            android:background="@drawable/btn_style"
            android:onClick="pantallaLogin"
            android:text="@string/strSalir" />

        <WebView
            android:id="@+id/webViewCSalaSeguridad"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            tools:visibility="invisible"
            tools:ignore="WebViewLayout" />

    </LinearLayout>
</ScrollView>