<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/fondomorado"
tools:context=".CGlobalExterior">

    <LinearLayout
        android:id="@+id/LinearLayoutCGlobalExterior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/relativeLayoutCGlobalExterior"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/btn_style">

            <TextView
                android:id="@+id/textViewCGlobalExteriorTitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strExterior"
                android:textColor="@color/colorNegro"
                android:textSize="22sp"
                android:layout_marginStart="5dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewCGlobalExteriorUsuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewCGlobalExteriorTitulo"
                android:layout_marginTop="6dp"
                android:text="@string/strUsuario"
                android:textColor="@color/colorNegro"
                android:layout_marginStart="5dp"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/imageViewCGlobalExteriorUsuario"
                android:layout_width="62dp"
                android:layout_height="62dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/user" />

        </RelativeLayout>
        <TextView
            android:id="@+id/textViewCGlobalExteriorTituloControlLuces"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:text="@string/strControl_del_exterior"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Switch
            android:id="@+id/switchCGlobalExteriorLucesControl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:text="@string/StrLuces"
            android:textSize="20sp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textStyle="bold" />



        <Button
            android:id="@+id/buttonCGlobalExteriorLucesAtras"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="8"
            android:background="@drawable/btn_style"
            android:onClick="pantallaCGlobal"
            android:text="@string/strAtras" />

        <Button
            android:id="@+id/buttonCGlobalExteriorLucesSalir"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="8"
            android:background="@drawable/btn_style"
            android:onClick="pantallaLogin"
            android:text="@string/strSalir" />

        <WebView
            android:id="@+id/webViewCGlobalExteriorLuces"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            tools:visibility="invisible"
            tools:ignore="WebViewLayout" />

    </LinearLayout>
</ScrollView>